# mrs-client

./: .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md  SKILL.md  pyproject.toml  requirements.txt
docs/: STATIC_LEVEL0.md
examples/: agent_skill.py  basic_search.py
mrs_cli/: __init__.py  main.py  output.py
mrs_cli/commands/: __init__.py  identity.py  info.py  list_cmd.py  register.py  release.py  search.py
mrs_client/: __init__.py  auth.py  client.py  config.py  exceptions.py  geo.py  http.py  mock_server.py  models.py  search.py  validation.py
scripts/: bootstrap.sh  static-mrs-lint.py  static-mrs-query.py  verify.sh
tests/: __init__.py  test_auth.py  test_config.py  test_geo.py  test_mock_server.py  test_models.py  test_validation.py
